# ml-drift-sentinel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_basic.py
